Added a customer review feature