@@ -3,11 +3,11 @@ package com.coursework.bookstore_api.dto;
 import com.coursework.bookstore_api.model.Author;
 import com.coursework.bookstore_api.model.Book;
 import com.coursework.bookstore_api.model.Genre;
+import com.coursework.bookstore_api.model.Review;
 import lombok.Data;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Data
 public class BookDto {
@@ -18,19 +18,20 @@ public class BookDto {
     private double price;
     private int numberInStock;
     private String language;
-    private List<String> genreNames;
+    private List<String> genreNames = new ArrayList<>();
+    private List<Integer> reviewIds = new ArrayList<>();
 
     public static BookDto from(Book book) {
         BookDto dto = new BookDto();
         dto.id = book.getId();
         dto.title = book.getTitle();
-        dto.authorNames = book.getAuthors().stream()
-                .map(Author::getName).collect(Collectors.toList());
+        dto.authorNames = book.getAuthors().stream().map(Author::getName).toList();
         dto.publisher = book.getPublisher().getPublisherName();
         dto.price = book.getPrice();
         dto.numberInStock = book.getNumberInStock();
         dto.language = book.getLanguage().getLanguage();
         dto.genreNames = book.getGenres().stream().map(Genre::getGenreName).toList();
+        dto.reviewIds = book.getReviews().stream().map(Review::getId).toList();
         return dto;
     }
 
